--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Workout Video Generator</title>
+    <title>Wurqit</title>
     <!-- Favicons and App Icons -->
     <link
       rel="icon"
@@ -103,7 +103,12 @@
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
-        background-color: #f5f5f5;
+        background-image: url('media/images/background.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        min-height: 100vh;
         user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;
@@ -117,10 +122,25 @@
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       }
 
-      h1 {
-        text-align: center;
-        color: #333;
+      .app-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         margin-bottom: 30px;
+        gap: 15px;
+      }
+
+      .app-icon {
+        width: 48px;
+        height: 48px;
+        object-fit: contain;
+      }
+
+      .app-title {
+        font-size: 2.5em;
+        font-weight: bold;
+        color: #333;
+        margin: 0;
       }
 
       .form-section {
@@ -277,7 +297,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>🏋️ Workout Video Generator</h1>
+      <div class="app-header">
+        <img src="media/icon/apple.png" alt="Wurqit App Icon" class="app-icon">
+        <h1 class="app-title">Wurqit</h1>
+      </div>
 
       <form id="workoutForm">
         <!-- Duration Settings -->
