--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
-        background-image: url("media/images/background.png");
+        background-image: url("background.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -298,11 +298,7 @@
   <body>
     <div class="container">
       <div class="app-header">
-        <img
-          src="media/images/apple.png"
-          alt="Wurqit App Icon"
-          class="app-icon"
-        />
+        <img src="icon.png" alt="Wurqit App Icon" class="app-icon" />
         <h1 class="app-title">Wurqit</h1>
       </div>
 
