Improving the style

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wurqit</title>
+    <title>WURQIT</title>
     <!-- Favicons and App Icons -->
     <link
       rel="icon"
@@ -98,8 +98,15 @@
     />
     <meta name="theme-color" content="#ffffff" />
     <style>
+      @font-face {
+        font-family: 'Oswald';
+        src: url('media/images/Oswald.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+
       body {
-        font-family: Arial, sans-serif;
+        font-family: 'Oswald', Arial, sans-serif;
         max-width: 800px;
         margin: 0 auto;
         padding: 20px;
@@ -298,8 +305,8 @@
   <body>
     <div class="container">
       <div class="app-header">
-        <img src="icon.png" alt="Wurqit App Icon" class="app-icon" />
-        <h1 class="app-title">Wurqit</h1>
+        <img src="icon.png" alt="WURQIT App Icon" class="app-icon" />
+        <h1 class="app-title">WURQIT</h1>
       </div>
 
       <form id="workoutForm">
