--- a/index.html
+++ b/index.html
@@ -222,6 +222,22 @@
       <div id="output"></div>
     </div>
 
+    <!-- Update Progress Overlay -->
+    <div class="update-overlay" id="updateOverlay">
+      <div class="update-modal">
+        <div class="update-header">
+          <h3>🔄 Downloading Update</h3>
+        </div>
+        <div class="update-content">
+          <div class="update-progress-text" id="updateProgressText">0%</div>
+          <div class="update-progress-bar">
+            <div class="update-progress-fill" id="updateProgressFill"></div>
+          </div>
+          <div class="update-message" id="updateMessage">Starting download...</div>
+        </div>
+      </div>
+    </div>
+
     <script src="src/script.js"></script>
   </body>
 </html>
